force-app/main/default/objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description>Registo das despesas da RaiseN&apos;GO.</description>
    <label>Despesa</label>
    <nameField>
        <displayFormat>D-{YYYY}/{0}</displayFormat>
        <label>Despesa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Despesas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>