force-app/main/default/objects/Expense__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A que orçamento está associada?</inlineHelpText>
    <label>Orçamento</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Despesas</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>