force-app/main/default/objects/Expense__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Data em que a despesa foi realizada.</inlineHelpText>
    <label>Data</label>
    <type>Date</type>
</CustomField>