force-app/main/default/objects/Expense__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Descrição da despesa.</inlineHelpText>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>