force-app/main/default/objects/Expense__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Esta despesa está relacionada com que movimento bancário?</inlineHelpText>
    <label>Movimento</label>
    <referenceTo>Transactions__c</referenceTo>
    <relationshipLabel>Despesas</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>