force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <columns>Amount__c</columns>
    <columns>Budget__c</columns>
    <columns>Transaction__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>