force-app/main/default/objects/Expense__c/listViews/Despesas_concretizadas.listView-meta.xml
<ListView>
    <fullName>Despesas_concretizadas</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Budget__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Despesas concretizadas</label>
</ListView>