force-app/main/default/objects/Expense__c/listViews/Despesas_sem_Or_amento.listView-meta.xml
<ListView>
    <fullName>Despesas_sem_Or_amento</fullName>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Budget__c</field>
        <operation>equals</operation>
    </filters>
    <label>Despesas sem Orçamento</label>
</ListView>