force-app/main/default/objects/Expense__c/listViews/LTIMO_M_S.listView-meta.xml
<ListView>
    <fullName>LTIMO_M_S</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Transaction__c</columns>
    <columns>Budget__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>ÚLTIMO MÊS</label>
</ListView>